--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row g-4">
   <div class="col-md-6">
-    <img src="{{ event.image_url }}" class="img-fluid rounded" alt="{{ event.title }}">
+    <img src="{{ event.image.url }}" class="img-fluid rounded" alt="{{ event.title }}">
   </div>
   <div class="col-md-6">
     <h1>{{ event.title }}</h1>
